新增点击聚焦、曝光，以及权限判断！

--- a/XFCamera/XFCamera/Info.plist
+++ b/XFCamera/XFCamera/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>App需要想问您的相机</string>
 </dict>
 </plist>
